# spclauncher

./: .gitignore  backend.py  clientnewcode.py  pyproject.toml  requirements.txt  run.py  spectercraft.spec
.github/workflows/: build.yml
launcher/: main.py  minecraft.py
