[project]
name = "spc-launcher"
version = "0.1"
description = "herhangi bi launcher"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "minecraft-launcher-lib>=4.7",
    "requests>=2.31",
]

[project.scripts]
minecraft-launcher = "launcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
